testsuite/tests/properties/invalid_call/no_such_prop/test.lkt
from common import FooNode

class BarNode: FooNode {
    @exported fun bar_prop(): Int = node.no_such_prop(12)
}
